[package]
name = "max31865"
version = "0.1.0"
authors = ["Rudi Horn <dyn-git@rudi-horn.de>"]
categories = [
    "embedded",
    "no-std",
]
description = "MAX31865 with typestate"
keywords = [
    "arm",
    "cortex-m",
    "template",
]

[dependencies]
cortex-m = "*"
cortex-m-rtfm = "*"
cortex-m-rt = {version = "*", features = ["abort-on-panic"]}
tslib = { path = "../tslib", features = ["rt"] }


[profile.release]
debug = true
lto = true
